Created Project for MODERNWARE COLLEGE DREAMS WEB PORTAL, Created Components for the following: * Admin(Admin Routes, Client-Types, Manage-Clients, Profiles), * Interfaces(Response Classes), * Landing(Forgot-Password, Login, Reset-Password) * Models * Pipes * User Imported and Implemented routes for each components created, Assigned Services to their Roles (Guard Service and RoleServiceAdmin) Updated angular.json and package.json files

--- a/src/app/admin/admin-routes/admin-routes.component.html
+++ b/src/app/admin/admin-routes/admin-routes.component.html
@@ -6,7 +6,7 @@
     <app-header class="mb-5"></app-header>
 
     <div class="" style="min-height: 68vh">
-      <div class="" style="margin-top:5%;padding: 0 22px;">
+      <div class="mt-sm-5" style="margin-top:5%;padding: 0 22px;">
         <router-outlet class=""></router-outlet>
       </div>
     </div>
