--- a/src/app/admin/client-types/client-types.component.html
+++ b/src/app/admin/client-types/client-types.component.html
@@ -39,14 +39,20 @@
                   <td>{{ i + 1}}</td>
                   <td>{{type?.name}}</td>
                   <td>{{type?.description}}</td>
-                    <td class="text-center">
-                            <a href="javascript:void(0)" (click)="editType(type)" class="btn btn-link btn-warning btn-just-icon edit"><i class="material-icons">edit</i><div class="ripple-container"></div></a>
-                            <a href="javascript:void(0)" (click)="deleteType(type)" class="btn btn-link btn-danger btn-just-icon remove"><i class="material-icons">close</i><div class="ripple-container"></div></a>
-                    </td>
+                  <td class="text-center">
+                          <a href="javascript:void(0)" (click)="editType(type)" class="btn btn-link btn-warning btn-just-icon edit">
+                            <i class="material-icons">edit</i>
+                            <div class="ripple-container"></div>
+                          </a>
+                          <a href="javascript:void(0)" (click)="deleteType(type)" class="btn btn-link btn-danger btn-just-icon remove">
+                            <i class="material-icons">close</i>
+                            <div class="ripple-container"></div>
+                          </a>
+                  </td>
                 </tr>
                 </tbody>
                 <tbody *ngIf="clientTypes.length < 1">
-                <tr ><td colspan="3">No client type available!</td></tr>
+                <tr><td colspan="3">No client type available!</td></tr>
                 </tbody>
               </table>
             </div></div>
@@ -73,7 +79,8 @@
 
             <div class="form-group bmd-form-group mb-2">
               <label for="description" class="">Description </label>
-              <textarea  class="form-control" id="description" name="description" [(ngModel)]="clientType.description" [ngModelOptions]="{standalone: true}"></textarea>
+              <textarea  class="form-control" id="description" name="description" [(ngModel)]="clientType.description" [ngModelOptions]="{standalone: true}">
+              </textarea>
             </div>
             <div class="category form-category">* Required fields</div>
           </div>
