--- a/src/app/shared/layout/dashboard/footer/footer.component.html
+++ b/src/app/shared/layout/dashboard/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="footer">
   <div class="container">
     <div class="copyright float-left">
-      &copy;{{year}} KYC Portal.
+      &copy;{{year}} Mware CollegeDreams Web Portal.
     </div>
     <div class="copyright float-right">
-      All right reserved.Powered by  <a href="https://www.upperlink.ng" target="_blank">Upperlink Limited</a>
+      All right reserved.Powered by  <a href="https://www.skilledminds.com.ng" target="_blank">Skilled Minds Tech</a>
     </div>
   </div>
 </footer>
