--- a/src/app/shared/layout/landing/l-footer/l-footer.component.html
+++ b/src/app/shared/layout/landing/l-footer/l-footer.component.html
@@ -1,5 +1,5 @@
 <div class="container" style="z-index: 9">
   <div class="copyright">
-    &copy;{{year}} KYC Portal. All right reserved.Powered by  <a href="https://www.upperlink.ng" target="_blank">Upperlink Limited</a>
+    &copy;{{year}} MwareCollegeDreamsWeb Portal. All right reserved.Powered by  <a href="https://www.skilledminds.com.ng" target="_blank">Skilled Minds Tech</a>
   </div>
 </div>
