--- a/src/app/shared/layout/landing/l-header/l-header.component.html
+++ b/src/app/shared/layout/landing/l-header/l-header.component.html
@@ -1,7 +1,23 @@
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top text-white" id="navigation-example">
   <div class="container">
     <div class="navbar-wrapper">
-      <a class="navbar-brand font-weight-bold" href="javascript:void(0)" [routerLink]="['/']"><img src="assets/images/MwareCollegeDreamsWeb.png" width="150"></a>
+      <a class="navbar-brand font-weight-bold mt-2" href="javascript:void(0)" [routerLink]="['/']">
+        <div class="diff">
+          <span>College</span>Dreams
+        </div>
+      </a>
+    </div>
+  </div>
+</nav>
+<!-- End Navbar -->
+<!--
+
+<nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top text-white" id="navigation-example">
+  <div class="container">
+    <div class="navbar-wrapper">
+      <a class="navbar-brand font-weight-bold" href="javascript:void(0)" [routerLink]="['/']"><img
+        src="../../../../../assets/images/MwareCollegeDreamsWeb.png" width="150"></a>
     </div>
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="navbar-nav">
@@ -15,3 +31,4 @@
     </div>
   </div>
 </nav>
+-->
