--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <div class="container-fluid">
-    <h3>User logs here</h3>
+    <h3>User Dashboard Content In here</h3>
     <br>
   </div>
 </div>
